k8s-for-beginners-nana/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kubernetes-dashboard
  # Kubernetes reports the line below as deprecated
  # and recommends using ingressClassName instead
  # annotations:
    # kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - dashboard.com
      secretName: dashboard-com
  ingressClassName: nginx
  rules:
  - host: dashboard.com
    http:
      paths:
      - path: /
        pathType: Prefix  
        backend:
          service:
            name: kubernetes-dashboard
            port: 
              number: 80
